plugins {
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.10.1'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.java.dev.jna:jna:5.14.0'
    implementation 'net.java.dev.jna:jna-platform:5.14.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application {
    mainClass = 'shell.Victim'
}

graalvmNative {
    binaries {
        configureEach {
            classpath = sourceSets.main.runtimeClasspath

            buildArgs.add('--no-fallback')
            buildArgs.add('-H:+AddAllCharsets')
            buildArgs.add('--enable-native-access=ALL-UNNAMED')
        }

        register("victim") {
            mainClass = 'shell.Victim'
            imageName = 'victim'

            buildArgs.add('-H:+UnlockExperimentalVMOptions')
            buildArgs.add('--gui')


            // 3. Keep your existing working configs
            buildArgs.add("-H:ConfigurationFileDirectories=${projectDir}/src/main/resources/META-INF/native-image/shell/victim/")
            buildArgs.add('-H:+StaticExecutableWithDynamicLibC')
            buildArgs.add('-Djna.nosys=true')
            buildArgs.add('--enable-native-access=ALL-UNNAMED')
        }

    }
}

